bobcat (1.18.1) (Not yet distributed)

  * Removed all left-over redundant include guards
  
  * Renamed all identifiers (macro defines, etc.) that started with _ into
    names not starting with _. This only affects include-guard identifiers and
    symbols used internally, so programs using Bobcat should not be affected
    by this modification.

  * Added the files README.X11 and README.milter 

  * Several members of FBB::State were not documented in the bobcat/stat
    man-page: missing documentation is now included (TODO).

  * Added the class CGI and for_each() function templates (and their
    man-pages) (TODO).

bobcat (1.17.2)

  * Arg's constructors changed in accordance with the new (?) getopt()
    function: missing option arguments are now properly recognized and no
    longer confused with `unknown options'

  * The Table man-page incorrectly listed `Table const &' as its second
    argument. The modifier `const' is incorrect as the insertion may imply
    the addition of empty elements to the table in order to make it
    rectangular. The `const' modifier was removed from the man-page.

bobcat (1.17.1)

  * Removed Wrap* wrappers from Bisonc++. Use FnWrap* instead.

  * Added member rfc2822() to DateTime returning the time according to
    RFC 2822 (e.g., as displayed by the `date -R' command.

  * Partial construction and installation of the Bobcat library is now 
    supported via #defines in INSTALL.im

  * Minor modifications to satify g++4-3's #include requirements

  * TEMPORARILY suppressed the `deprecated header warning' resulting from
    using ext/hash_map in bobcat/hash. The fix is a kludge: the warning is
    suppressed by defining the backward warning include guard identifier just
    prior to including ext/hash_map and by undefining it thereafter.

bobcat (1.17.0)

  * Repaired double free bug in Pattern
  
  * Changed the implementation and interface of MailHeaders. See 'man -e
    bobcat mailheaders' for details
