@@ -170,11 +170,6 @@ inline unsigned long long CGI::maxUploadSize() const
     return d_maxUploadSize;
 }
 
-inline void CGIFSA::setEscape(size_t idx)
-{
-    d_escape[idx] = d_setEscape;
-}
-
 }   // namespace
 
 
