@@ -127,5 +127,10 @@ inline int CGIFSA::iscgi(int ch)
     return s_cgi.find(ch) != std::string::npos;
 }
 
+inline void CGIFSA::setEscape(size_t idx)
+{
+    d_escape[idx] = d_setEscape;
+}
+
 
 }   // namespace
