@@ -10,7 +10,7 @@ void CGIFSA::charRange()
     d_stack.pop();                  // first char
 
     if (begin <= end)
-        for_each(begin, end + 1, *this, &CGIFSA::setEscape);
+        for_each(begin, end + 1, this, &CGIFSA::setEscape);
 
     acceptAll();                       // unescape any remaining chars
 }
