@@ -45,7 +45,11 @@ member function or a function object;
     itb(void repeat(Counter counter, Class &object, Member member))
        tt(object.*member) is called tt(counter) times, passing no argument to 
         tt(object.*member).
+    itb(void repeat(Counter counter, Class *object, Member member))
+       tt(object->*member) is called tt(counter) times, passing no argument to 
+        tt(object->*member).
     )
+    tt(Class) and tt(Member) may also be defined as tt(const) objects. 
 
 
 manpagesection(EXAMPLES)
