@@ -1,4 +1,4 @@
-bobcat (1.18.1) (Not yet distributed)
+bobcat (1.18.1)
 
   * Removed all left-over redundant include guards
   
@@ -12,8 +12,17 @@ bobcat (1.18.1) (Not yet distributed)
   * Several members of FBB::State were not documented in the bobcat/stat
     man-page: missing documentation is now included (TODO).
 
-  * Added the class CGI and for_each() function templates (and their
-    man-pages) (TODO).
+  * Added the class CGI processing forms submitted using the Common Gateway
+    Interface 
+
+  * Added for_each() and repeat() function templates (and their man-pages)
+
+  * Reorganized the main bobcat man-page, adding a categorization of Bobcat's
+    classes 
+
+  * Repaired a flaw in Pattern due to which a segfault could occur becasue of 
+    a failure to initialize the Finite State Automaton processing Perl-like
+    character-set abbreviations. 
 
 bobcat (1.17.2)
 
